# euroleague-fantasy-recommender

./: .gitignore  README.md  pyproject.toml
dags/: data_pipeline.py
dags/configs/: api_configs.yaml
